<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x800"
    android:layout_height="@dimen/y1000"
    android:background="@drawable/shape_login"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/y150"
        android:layout_marginTop="@dimen/y100"
        android:gravity="center"
        android:text="@string/popup_login_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x75"
        />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/y150"
    android:layout_marginEnd="@dimen/x50"
    android:layout_marginStart="@dimen/x50"
        android:orientation="horizontal"
    android:layout_marginTop="@dimen/y50"
    android:background="@drawable/shape_login_rounded">

        <ImageView
            android:layout_width="@dimen/x100"
            android:layout_height="@dimen/y100"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/x50"
            android:scaleType="fitXY"
            android:src="@drawable/ic_id" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:inputType="number"
            android:id="@+id/id_popup_login_id_edit_text"
            android:textSize="@dimen/x50"
            android:hint="@string/popup_login_id_hint" />

        <ImageView
            android:layout_width="@dimen/x100"
            android:layout_height="@dimen/y100"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/x50"
            android:id="@+id/id_popup_login_id_image_view"
            android:src="@drawable/ic_clear" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y150"
        android:layout_marginEnd="@dimen/x50"
        android:layout_marginStart="@dimen/x50"
        android:layout_marginTop="@dimen/y50"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_rounded">

        <ImageView
            android:layout_width="@dimen/x100"
            android:layout_height="@dimen/y100"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/x50"
            android:scaleType="fitXY"
            android:src="@drawable/ic_password" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:textSize="@dimen/x50"
            android:inputType="numberPassword"
            android:id="@+id/id_popup_login_password_edit_text"
            android:hint="@string/popup_login_id_pass_word_hint" />

        <ImageView
            android:layout_width="@dimen/x100"
            android:layout_height="@dimen/y100"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/x50"
            android:id="@+id/id_popup_login_password_image_view"
            android:src="@drawable/ic_clear" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x150"
        android:layout_marginTop="@dimen/y75"
        android:layout_marginStart="@dimen/x50"
        android:layout_marginEnd="@dimen/x50"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/x50"
            android:background="@drawable/ripple_button"
            android:textSize="@dimen/x75"
            android:text="@string/popup_login_cancel"
            android:textColor="@android:color/white"
            android:id="@+id/id_popup_login_cancel_button"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/ripple_button"
            android:textSize="@dimen/x75"
            android:text="@string/popup_login_ok"
            android:textColor="@android:color/white"
            android:id="@+id/id_popup_login_ok_button"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>